Bug 508015 - Missing line translation in bluedevil widget.
Summary: Missing line translation in bluedevil widget.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Bluetooth widget (other bugs)
Version First Reported In: 6.4.80
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Nate Graham
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2025-08-08 12:51 UTC by Victor Ryzhykh
Modified: 2025-08-08 16:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
Bluetooth widget/system tray item (27.96 KB, image/jpeg)
2025-08-08 12:51 UTC, Victor Ryzhykh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Ryzhykh 2025-08-08 12:51:49 UTC
Created attachment 183881 [details]
Bluetooth widget/system tray item

Missing line translation in bluedevil widget.

These lines are in file
https://invent.kde.org/plasma/bluedevil/-/blob/master/src/applet/devicesproxymodel.cpp?ref_type=heads#L49

        if (index.data(BluezQt::DevicesModel::BlockedRole).toBool()) {
            return QStringLiteral("Blocked");
        }
        if (index.data(BluezQt::DevicesModel::ConnectedRole).toBool()) {
            return QStringLiteral("Connected");
        }
        return QStringLiteral("Available");

They don't get into the plasma_applet_org.kde.plasma.bluetooth.po file, but even if you add them manually, the translation still doesn't show up.


Operating System: ROSA Fresh Desktop 13
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.17.0

Qt Version: 6.9.1
Kernel Version: 6.13.12-generic-7rosa13-x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × 11th Gen Intel® Core™ i7-11800H @ 2.30GHz
Memory: 40 ГиБ of RAM (38.8 ГиБ usable)
Graphics Processor 1: Intel® UHD Graphics
Graphics Processor 2: NVIDIA GeForce RTX 3050 Ti Laptop GPU
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus M16 GU603HE_GU603HE
System Version: 1.0
Comment 1 Nate Graham 2025-08-08 15:37:19 UTC
Right, those strings aren't set up for translation, whoops!
Comment 2 Bug Janitor Service 2025-08-08 15:40:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/bluedevil/-/merge_requests/221
Comment 3 Victor Ryzhykh 2025-08-08 16:12:00 UTC
(In reply to Bug Janitor Service from comment #2)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/bluedevil/-/merge_requests/221

This commit fixed the issue. These lines are now displayed with translation.
Comment 4 Nate Graham 2025-08-08 16:13:37 UTC
Git commit 403cc43d90639e7fda704ed35ec7a6435dc9e5a3 by Nate Graham.
Committed on 08/08/2025 at 15:37.
Pushed by ngraham into branch 'master'.

applet: make section headers translatable
FIXED-IN: 6.5.0

M  +5    -3    src/applet/devicesproxymodel.cpp

https://invent.kde.org/plasma/bluedevil/-/commit/403cc43d90639e7fda704ed35ec7a6435dc9e5a3