applet: make section headers translatable

BUG: 508015
FIXED-IN: 6.5.0